# SPlayer-Next

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.yaml  CLAUDE.md  Cargo.toml  README.md  USER_AGREEMENT.md  auto-eslint.mjs  components.d.ts  electron-builder.config.ts  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  tsconfig.web.json  uno.config.ts
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/instructions/: review.instructions.md
.github/scripts/: prepare-release-assets.cjs
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  dev.yml  issue-helper.yml  release.yml
demo/: audio-architecture.md
docs/: plugins-development.md  plugins-mvp.md  plugins-usage.md
electron/main/: index.ts
electron/main/apis/: musicbrainz.ts  netease.ts
electron/main/core/: index.ts
electron/main/database/: index.ts  lyricCache.ts  lyricMatchCache.ts  migration.ts  queries.ts  sessions.ts  songCache.ts
electron/main/ipc/: apis.ts  cache.ts  config.ts  hotkey.ts  index.ts  library.ts  lyrics.ts  netease.ts  nowPlaying.ts  playback.ts  player.ts  plugin.ts  streaming.ts  system.ts  theme.ts  window.ts
electron/main/plugins/: host.ts  loader.ts  lx-shim.ts  net.ts  registry.ts  router.ts  sandbox.ts  sandbox.worker.ts  storage.ts
electron/main/server/: broadcast.ts  index.ts  routes.ts  ws.ts
electron/main/services/: database.ts  device.ts  engine.ts  globalHotkey.ts  localLyricRepo.ts  media.ts  nowPlaying.ts  playback.ts  scanner.ts  songCache.ts  thumbar.ts  tray.ts  updater.ts
electron/main/store/: index.ts  migrations.ts  streaming.ts  types.ts  utils.ts  windowStates.ts
electron/main/utils/: broadcast.ts  config.ts  errors.ts  fetchBytes.ts  helper.ts  i18n.ts  logger.ts  metadata.ts  nativeLoader.ts  paths.ts  protocol.ts  time.ts
electron/main/window/: create.ts  desktopLyric.ts  dynamicIsland.ts  index.ts  login.ts  main.ts  taskbarLyric.ts
electron/preload/: index.d.ts  index.ts
electron/server/: artistAvatar.ts
native/audio-engine/: Cargo.toml  build.rs  index.d.ts  package.json
native/audio-engine/src/: audio_output.rs  decoder.rs  equalizer.rs  fft.rs  http_source.rs  lib.rs  logger.rs  metadata.rs  player.rs  scanner.rs  shared.rs  source.rs  tag_editor.rs  tempo.rs
native/media-ctrl/: Cargo.toml
native/media-ctrl/src/: discord.rs  lib.rs  logger.rs
native/media-ctrl/src/sys_media/: linux.rs  macos.rs  mod.rs  windows.rs
native/taskbar-lyric/: Cargo.toml  index.d.ts
native/taskbar-lyric/src/: lib.rs  logger.rs  registry_watcher.rs  taskbar_created_watcher.rs  tray_watcher.rs  uia.rs  uia_watcher.rs  utils.rs
native/taskbar-lyric/src/strategy/: mod.rs  win10.rs  win11.rs
scripts/: after-pack.ts  build-native.ts
shared/defaults/: hotkeys.ts  plugin-api.ts  settings.ts  windowStates.ts
shared/types/: apis.ts  errors.ts  hotkey.ts  library.ts  lyrics.ts  netease.ts  nowPlaying.ts  platform.ts  playback.ts  player.ts  plugin.ts  settings.ts  streaming.ts  tagEditor.ts  window.ts  windowState.ts
shared/utils/: accelerator.ts  lyric.ts  lyricSync.ts  path.ts
src/: App.vue  main.ts
src/apis/: kugou.ts  netease.ts  search.ts
src/apis/album/: netease.ts
src/apis/artist/: netease.ts
src/apis/cloud/: netease.ts
src/apis/login/: netease.ts
src/apis/playlist/: netease.ts
src/apis/recommend/: netease.ts
src/apis/search/: kugou.ts  netease.ts  qqmusic.ts
src/apis/song/: netease.ts
src/apis/url/: netease.ts
src/apis/user/: netease.ts
src/components/: AppBackground.vue  SPerformanceMonitor.vue
src/components/layout/: NavHeader.vue  NavSearch.vue  NavUser.vue  SideBar.vue  SideBarLogo.vue
src/components/list/: CoverList.vue  (+2 more)
src/composables/: useCacheStats.ts  useDragSort.ts  useFavorite.ts  useFmMode.ts  useHeartMode.ts  useMultiSelect.ts  usePlaybackTime.ts  usePlayer.ts  useSystemFonts.ts  useToast.ts  useTrackMenu.ts  useWindowControls.ts
src/core/: player.ts
src/i18n/: index.ts
src/layouts/: MainLayout.vue
src/pages/: AlbumList.vue  Artist.vue  Cloud.vue  Collection.vue  Daily.vue  DesktopLyric.vue  Favorites.vue  Folders.vue  Home.vue  Library.vue  LocalList.vue  Search.vue
src/router/: index.ts
src/services/: abLoop.ts  artistLoader.ts  audioLoader.ts  audioSource.ts  autoClose.ts  cacheScheduler.ts  collectionLoader.ts  lyricLoader.ts  playback.ts
src/settings/: schema.ts  useSettingModel.ts  useSettingsDialog.ts  virtualBindings.ts
src/stores/: data.ts  history.ts  hotkey.ts  library.ts  media.ts  player.ts  playlist.ts  plugins.ts  queue.ts  settings.ts  status.ts  streaming.ts  theme.ts  update.ts  user.ts
src/styles/: global.css  markdown.css
src/types/: artist.ts  collection.ts  folder.ts  lyric.ts  netease.ts  player.ts  settings-schema.ts  settings.ts  song.ts  theme.ts  user.ts
src/utils/: color.ts  errors.ts  folderTree.ts  md5.ts  navigate.ts  netease.ts  quality.ts  tagMatch.ts  time.ts  url.ts
windows/desktop-lyric/: App.css  App.vue  index.html  utils.ts
windows/dynamic-island/: App.vue  index.html
windows/taskbar-lyric/: App.vue  index.html
(+238 files in other folders)
