[workspace]
members = ["./native/audio-engine", "./native/media-ctrl", "./native/taskbar-lyric"]
resolver = "3"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
redundant_clone = "deny"
needless_collect = "warn"
large_enum_variant = "warn"
collapsible_if = "allow"
redundant_pattern_matching = "allow"

[profile.release]
lto = true
strip = "symbols"
