[package]
name = "audio-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8", features = ["napi9", "serde-json", "tokio_rt"] }
napi-derive = "3.5"
ffmpeg_audio = { git = "https://github.com/SPlayer-Dev/ffmpeg-audio", tag = "v0.2.0", default-features = false }
ureq = { version = "2", default-features = false, features = ["tls"] }
rodio = { version = "0.20", default-features = false }
cpal = "0.15"
parking_lot = "0.12"
anyhow = "1"
thiserror = "2"
signalsmith-stretch = "0.1.3"
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
  "bmp",
  "webp",
] }
rustfft = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "local-time",
] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["macros", "formatting"] }
walkdir = "2"
tokio = { version = "1", features = ["rt"] }

[build-dependencies]
napi-build = "2.3"

[dev-dependencies]
httpmock = "0.7"

[lints]
workspace = true
