[package]
name = "media-ctrl"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8", features = ["tokio_rt", "napi9"] }
napi-derive = "3.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["macros", "formatting"] }

# Discord RPC
discord-rich-presence = "1.0"
url = "2.5"

[build-dependencies]
napi-build = "2.3"

# Windows
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = ["Media_Playback", "Storage_Streams"]

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.9"
tempfile = "3.24"

# macOS
[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
objc2-media-player = "0.3"

[profile.release]
lto = true
strip = "symbols"
