[package]
name = "taskbar-lyric"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8", features = ["napi9", "serde-json"] }
napi-derive = "3.5"
anyhow = "1"
winreg = "0.55"
windows-core = "0.62.2"

[dependencies.windows]
version = "0.62"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_System_Variant",
  "Win32_System_Ole",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
]

[build-dependencies]
napi-build = "2.3"
